# PDFExtractor_Visualy

./: .gitattributes  .gitignore  Cargo.toml  PDF_EXTRACTION_ENHANCEMENT_MASTER_PROMPT.md  Prompt1.md  README.md  package-lock.json  package.json
apps/desktop/: package.json  playwright.config.ts  playwright.package.config.ts  tsconfig.json  vite.config.ts
artifacts/diagnostics/: current-page-extraction.json  current-transform-trace.json
crates/geometry/: Cargo.toml
crates/geometry/src/: lib.rs
docs/: assumptions.md  nonfunctional-requirements.md  product-requirements.md  roadmap.md
docs/adr/: 0001-pdf-engine.md  0002-ocr-engine.md  0003-ml-inference-runtime.md  0004-electron-python-ipc.md  0005-rust-python-integration.md  0006-project-persistence.md  0007-rendering-cache.md  0008-packaging-method.md  0009-installer-technology.md  0010-update-strategy.md
docs/agent-reports/: wave0-initial-report.md
docs/architecture/: current-system-map.md  data-flow.md  process-boundaries.md  system-overview.md
docs/diagnostics/: current-overlay-failure-analysis.md  end-to-end-object-trace.md
docs/extraction/: document-model.md  (+1 more)
scripts/: build-sidecar.ps1  capture-wave0-diagnostics.ps1  check-toolchain.ps1  extraction-service-runner.py  setup-python.ps1  verify-windows-package.ps1
services/extraction/: pyproject.toml
services/extraction/src/extraction_service/: geometry.py  models.py  native_pdf.py  rpc.py
services/extraction/tests/: test_geometry.py  test_native_pdf.py  test_rpc.py
services/extraction/tests/fixtures/: __init__.py  check_register_generator.py
(+26 files in other folders)
