[package]
name = "pdf_intelligence_geometry"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdf_intelligence_geometry"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
proptest = "1.7.0"
