[project]
name = "pdf-intelligence-extraction"
version = "0.1.0"
description = "Python extraction sidecar for PDF Intelligence"
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.11.7",
  "pypdf==5.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "ruff==0.12.2",
  "mypy==1.16.1",
  "pyinstaller==6.17.0",
  "reportlab==4.4.2"
]

[project.scripts]
pdf-intelligence-extraction = "extraction_service.rpc:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
